<resources>
    <string name="app_name">JJ商城</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="new_recommended">新品推荐</string>
    <string name="seckill">家电秒杀</string>
    <string name="fashion">时尚男装</string>
    <string name="select_all">全选</string>
    <string name="total">合计</string>
    <string name="cleanning">去结算</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="completed">完成</string>
    <string name="to_login">点击登录</string>
    <string name="share">分享</string>
    <string name="my_orders">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_info">个人资料</string>
    <string name="my_addresses">收货地址</string>
    <string name="my_msg">我的消息</string>
    <string name="logout">退出登录</string>
    <string name="token_error">登录失效，请重新登录</string>
    <string name="title_activity_new_order">NewOrderActivity</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_name_hint_text">请输入手机号码</string>
    <string name="login_password_hint_text">请输入密码</string>
    <string name="text_lgoin">登陆</string>
    <string name="regist_text">注册账号</string>
    <string name="forget_password_text">忘记密码</string>
</resources>
